Fixed project page and allow images and better alignment in project pages

--- a/app/assets/themes/pixelache/stylesheets/projects.css.scss
+++ b/app/assets/themes/pixelache/stylesheets/projects.css.scss
@@ -36,7 +36,7 @@ button.slick-next, button.slick-prev {
     width: 100%;
     margin-bottom: 2rem;
     &.top {
-      margin-top: 10px;
+      margin-top: 25px;
       background-color: #49a2fc;
     }
     color: #FFF;
